--- a/UI/html/messages.html
+++ b/UI/html/messages.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="messages.css">
+    <link rel="stylesheet" href="../css/messages.css">
     <title> Messages | Epic Mail</title>
 </head>
 <body>
@@ -44,6 +44,6 @@
         <p>&copy; 2019 | Epic Mail</p>
     </footer>
 
-    <script src="messages.js"></script>
+    <script src="../js/messages.js"></script>
 </body>
 </html>
