allow user to view drafted message and delete any drafted message

--- a/UI/html/messages.html
+++ b/UI/html/messages.html
@@ -33,7 +33,6 @@
             <div id="sent_content">
             </div>
             <div id="draft_content">
-                    drafft
             </div>
             <div id="new_content">
                 <form action="">
@@ -41,9 +40,9 @@
                     <input type="email">
                     <label for="">To group :</label>
                     <select name="" id="">
+                        <option value="" disabled selected>Choose a group</option>
                         <option value="">group 1</option>
                         <option value="">group 2</option>
-
                     </select>
                     <label for="">Message : </label>
                     <textarea>
