allow user to read an inbox message

--- a/UI/html/messages.html
+++ b/UI/html/messages.html
@@ -44,12 +44,14 @@
                         <option value="">group 1</option>
                         <option value="">group 2</option>
                     </select>
-                    <label for="">Message : </label>
-                    <textarea>
-                         
-                    </textarea>
-                    <button type="submit" name="" id="submit" value="">Send</button>
-                    <button class="save">Save to draft</button>
+                    <div id="message_input">
+                        <label for="">Message : </label>
+                        <textarea>
+                                 
+                        </textarea>
+                        <button type="submit" name="" id="submit" value="">Send</button>
+                        <button class="save">Save to draft</button>
+                    </div>
                 </form>
             </div>
         </div>
