make responsive the index page

--- a/UI/index.html
+++ b/UI/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Epic Mail | Register</title>
+    <title>Epic Mail</title>
 </head>
 <body>
     <!-- header -->
@@ -21,10 +21,49 @@
     </header>
     <!-- main contents -->
     <main>
-        <div>
+            <section class="index-banner">
+                <div class="vertical-center">
+                    <h2>EIC MAIL</h2>
+                    <h1>As EPIC Andelans who work towards advancing human potential and giving back to the society,we wish to empower others by building a web app that helps people exchange messages/information over the internet</h1>
+                </div>
+            </section>
+        <div class="wrapper">
 
-        </div>
-    </main>
+            <section class="index-links">
+                <a href="html/register.html">
+                    <div class="index-boxlink-square">
+                        <h3>Register</h3>
+                    </div>
+                </a> 
+                <a href="html/login.html">
+                    <div class="index-boxlink-rectangle">
+                        <h3>Login</h3>
+                    </div>
+                </a> 
+                <a href="html/login.html">
+                    <div class="index-boxlink-square">
+                        <h3>Messages</h3>
+                    </div>
+                </a> 
+                <a href="html/admin.html">
+                    <div class="index-boxlink-square">
+                        <h3>Admin</h3>
+                    </div>
+                </a> 
+                <a href="html/passwordreset.html">
+                    <div class="index-boxlink-rectangle">
+                        <h3>Change password</h3>
+                    </div>
+                </a> 
+                <a href="">
+                    <div class="index-boxlink-square">
+                        <h3>Contact</h3>
+                    </div>
+                </a> 
+            </section>
+            </div>
+        </main>
+    
     
     <!-- footer -->
     <footer>
