make responsive the index page

--- a/UI/index.html
+++ b/UI/index.html
@@ -40,7 +40,7 @@
                         <h3>Login</h3>
                     </div>
                 </a> 
-                <a href="html/login.html">
+                <a href="html/messages.html">
                     <div class="index-boxlink-square">
                         <h3>Messages</h3>
                     </div>
