--- a/UI/index.html
+++ b/UI/index.html
@@ -23,7 +23,7 @@
     <main>
             <section class="index-banner">
                 <div class="vertical-center">
-                    <h2>EIC MAIL</h2>
+                    <h2>EPIC MAIL</h2>
                     <h1>As EPIC Andelans who work towards advancing human potential and giving back to the society,we wish to empower others by building a web app that helps people exchange messages/information over the internet</h1>
                 </div>
             </section>
