edit register btn text

--- a/UI/html/login.html
+++ b/UI/html/login.html
@@ -21,7 +21,7 @@
     <!-- main contents -->
     <main>
         <h3>Login</h3>
-        <form action="" method="post" class="userinfoform">
+        <form action="messages.html" method="" class="userinfoform">
             <label for="">Email :</label>
             <input type="email" name="email" placeholder="Enter your email">
             <label for="">Password :</label>
