--- a/UI/html/register.html
+++ b/UI/html/register.html
@@ -21,7 +21,7 @@
     <!-- main contents -->
     <main>
         <h3>Registration</h3>
-        <form action="" method="post" class="userinfoform">
+        <form action="messages.html" method="" class="userinfoform">
             <label for="">Name :</label>
             <input type="text" name="name" placeholder="Enter your name">
             <label for="">Email :</label>
@@ -30,7 +30,7 @@
             <input type="password" name="password" placeholder="Enter your password">
             <label for="">Password confirmation :</label>
             <input type="email" name="password2" placeholder="Enter the same password">
-            <input type="submit" value="Login">
+            <input type="submit" value="Register">
             <p>Already have an account <a href="login.html">Sign in</a></p>
         </form>
     </main>
